# curly-bassoon

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
service/: __main__.py
service/config/: __init__.py  default.py  utils.py
service/db/: alembic.ini
service/db/connections/: __init__.py  session.py
service/db/migrator/: env.py
service/handlers/: __init__.py  health_check.py
service/schemas/: __init__.py
